# invoice-analyst

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  railway.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
apps/web/: .env.example  BACKEND_INTEGRATION.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(protected)/: layout.tsx
apps/web/components/charts/: PlotlyChart.tsx
apps/web/components/dashboard/: DashboardTabs.tsx  MetricSelector.tsx  ProductEvolutionPanel.tsx  ProductSelectionTable.tsx
apps/web/components/extraction/: ExtractionSteps.tsx  ExtractionWorkspace.tsx  PdfViewer.tsx
apps/web/components/forms/: LoginForm.tsx  PdfDropzone.tsx
apps/web/components/gestion/: GestionWorkspace.tsx
apps/web/components/layout/: Providers.tsx  Sidebar.tsx  TopBar.tsx
apps/web/components/tables/: EditableArticlesTable.tsx
apps/web/hooks/: useLocalStorage.tsx  useSupabase.tsx
apps/web/lib/: env.ts  extractionPersistence.ts  supabaseClient.ts  supabaseServer.ts
apps/web/lib/api/: dashboard.ts  (+1 more)
apps/web/types/: database.ts  invoice.ts
backend/app/: __init__.py  config.py  main.py
backend/app/middleware/: __init__.py  auth.py
backend/app/routers/: __init__.py  dashboard.py  extraction.py  invoices.py  products.py
backend/app/schemas/: __init__.py  dashboard.py  invoice.py  product.py
backend/templates/: lefort.yaml  metro.yaml
docs/: CLAUDE.md  CLEANUP_SUMMARY.md  architecture.md
invoice_analyst.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: app.py
src/invoice_analyst/: __init__.py  app.py  constants.py  logging_config.py  utils.py
src/invoice_analyst/adapters/: __init__.py  mistral_client.py  pdf_annotator.py  refinement_client.py  supabase_client.py
src/invoice_analyst/components/: analytics.py  charts.py  dashboard.py  gestion.py  main.py  sidebar.py  viewer.py
src/invoice_analyst/db/: db_manager.py  setup_db.py
src/invoice_analyst/domain/: __init__.py  constants.py  models.py  prompts.py
src/invoice_analyst/extraction/: __init__.py  pipeline.py
src/invoice_analyst/page/: analyse.py  extraction.py  gestion.py  globale.py  produit.py
src/invoice_analyst/services/: __init__.py  context_builder.py  extraction.py  persistence.py  storage.py
(+18 files in other folders)
