[project]
name = "invoice-analyst"
version = "0.1.0"
description = "A Python project for analyzing invoices."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "streamlit ==1.48.1",
    "mistralai",
    "pdf2image",
    "pytesseract",
    "pdf-annotate",
]

[project.optional-dependencies]
dev = [
    "pytest >=7.0.0",
    "black >=24.0.0",
    "flake8 >=7.0.0",
    "pre-commit >=3.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"