[project]
name = "invoice-analyst"
version = "0.2.0"
description = "Backend and shared services for the Invoice Analyst platform."
authors = [
    { name="Tiago Teixeira", email="tiago.teixeira.ai@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "supabase==2.18.1",
    "mistralai",
    "PyMuPDF",
    "pydantic>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest >=7.0.0",
    "black >=24.0.0",
    "flake8 >=7.0.0",
    "pre-commit >=3.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.pytest_cache
  | apps
)/
'''

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", ".venv", "__pycache__", "apps"]
